--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cached_network_image: 3.3.1
   carousel_slider: 4.2.1
   collection: 1.18.0
+  data_table_2: 2.5.10
   flutter_animate: 4.5.0
   flutter_cache_manager: 3.3.1
   font_awesome_flutter: 10.7.0
@@ -49,6 +50,7 @@ dependencies:
   shared_preferences_platform_interface: 2.3.1
   shared_preferences_web: 2.2.1
   sqflite: 2.2.6
+  stop_watch_timer: 3.0.2
   table_calendar: 3.1.1
   timeago: 3.6.1
   url_launcher: 6.3.0
